Add userController and unhance entity, mapper